fixed overlapping quotes with bottom bar/index

--- a/css/main.css
+++ b/css/main.css
@@ -241,6 +241,7 @@ footer {
   height:100vh;
   text-align: center;
   padding-top:100px;
+  margin-bottom:10%;
 }
 #section5{
   height:100vh;
